hide "missing" correctly in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -42,6 +42,7 @@ td.missing
 {
     body { background-color: black; color: #ccc; }
     table, th, td { border: 1px solid #333; }
+    td.missing { color: black; }
     input[type=number] { background-color: black; color: #ccc; }
     input[type=submit], button[type=submit], select { background-color: #555; color: #ccc; }
     a:link { color: #ff0; }
